unpackaged/main/default/objects/Task_Template_Item__c/Task_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Task Template Item</label>
    <nameField>
        <displayFormat>TTI-{00000000}</displayFormat>
        <label>Task Template Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>