unpackaged/main/default/objects/Task_Template_Item__c/fields/Branch_Goal_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Branch_Goal_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch Goal Milestone</label>
    <type>Checkbox</type>
</CustomField>