unpackaged/main/default/objects/Task_Template_Item__c/fields/Case_Template__c.field-meta.xml
<CustomField>
    <fullName>Case_Template__c</fullName>
    <label>Case Template</label>
    <referenceTo>Case_Template__c</referenceTo>
    <relationshipLabel>Task Template Items</relationshipLabel>
    <relationshipName>Task_Template_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>