unpackaged/main/default/objects/Task_Template_Item__c/fields/Home_Office_Goal_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Goal_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Office Goal Milestone</label>
    <type>Checkbox</type>
</CustomField>