unpackaged/main/default/objects/Task_Template_Item__c/fields/match__c.field-meta.xml
<CustomField>
    <fullName>match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>match</label>
    <type>Checkbox</type>
</CustomField>