unpackaged/main/default/objects/Task_Template_Item__c/fields/Testing_Name__c.field-meta.xml
<CustomField>
    <fullName>Testing_Name__c</fullName>
    <formula>Case_Template__r.Name + &#39; - &#39; +  Task_Template__r.Task_Template_Testing_Name__c</formula>
    <label>Testing Name</label>
    <type>Text</type>
</CustomField>