unpackaged/main/default/objects/Task_Template_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Template__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order__c</columns>
    <columns>Testing_Name__c</columns>
    <columns>Case_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>